# stock

./: .dockerignore  .env.example  .gitignore  AI_INDEX.md  CLAUDE.md  Dockerfile  README.md  WORKFLOW.md  code_structure.md  design.md  pyproject.toml  render.yaml
data/: agentic_orders_643103732.json  ai_supply_chain.yaml  company_dive_queue.yaml  conviction_watchlist.yaml  desired_stop_orders.json  emerging_fields.yaml  feeds.yaml  holdings.yaml  robinhood_positions_snapshot.json  secular_themes.yaml  smallcap_universe.yaml  stop_orders_result.json  tech_trends.yaml  topic_queue.yaml  watchlist.yaml  wechat_recipients.yaml
docs/: README.md  agent_guidance.md  code_structure.md  feature_backlog.md  orchestrator_logic_overview.md  requirements.md  runtime_source_of_truth.md
logs/: orchestrator_2026-05-11_21-33-26.log.err  orchestrator_2026-05-11_21-45-38.log.err  orchestrator_2026-05-13_09-19-47.log.err  orchestrator_2026-05-13_20-13-19.log.err  orchestrator_2026-05-13_20-50-57.log.err  orchestrator_2026-05-13_21-31-14.log.err  orchestrator_2026-05-17_22-15-15.log.err  orchestrator_2026-05-17_23-16-07.log.err
md/: README.md  complete_workflow.md  how_it_works.md  news_causal_design.md
mobile/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
openclaw_skill/: stock.skill.md
pipeline/: MASTER_PLAN.md  README.md  boss_delivery_package_2026-05-29.md  check_render_replies.md  daily_review_2026-05-01.md  daily_zh_2026-05-07.md  deep_dive_silicon_wafer_price_hike_2026-05-28.md  development.sh  idm_pptx_extract.md  plan_A_action_items_auto_queue.md  (+10 more)
(+246 files in other folders)
